Committing the (updated) source files.

--- a/jiyinjc-website/config.toml
+++ b/jiyinjc-website/config.toml
@@ -1,4 +1,4 @@
 theme="mediumish-gohugo-theme"
-baseURL = "http://example.org/"
+baseURL = "http://jiyinjc.vip/"
 languageCode = "en-us"
 title = "基因检测"
